<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/blue_dark" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="8.0dip" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.ivankocijan.magicviews.views.MagicTextView
        android:textSize="@dimen/text_very_big"
        android:textStyle="bold"
        android:textColor="@color/splash_green"
        android:id="@+id/activity_splash_text_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:text="@string/splash_title_1"
        android:layout_alignParentTop="true"
        app:typeFace="lato-bold.otf"
        android:gravity="center"
        />


    <ImageView
        android:id="@id/activity_splash_img_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:src="@drawable/img_splash_logo"
        android:layout_below="@id/activity_splash_text_title_1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/default_img_content_description"
        />

    <ProgressBar
        android:id="@id/activity_splash_progressBar"
        android:layout_width="120.0dip"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_below="@id/activity_splash_img_logo"
        android:layout_centerHorizontal="true"
        style="?android:attr/progressBarStyleHorizontal"
        />

    <com.ivankocijan.magicviews.views.MagicTextView
        android:textSize="@dimen/text_very_big"
        android:textColor="@color/splash_blue_light"
        android:id="@id/activity_splash_text_subtitle_1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_subtitle_1_label"
        android:layout_below="@id/activity_splash_progressBar"
        android:layout_centerHorizontal="true"
        app:typeFace="lato-regular.otf"
        />

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@id/activity_splash_layout_subtitle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:layout_below="@id/activity_splash_text_subtitle_1_label"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="20.0dip"
            android:layout_height="26.0dip"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/img_splash_subtitle_1"
            android:contentDescription="@string/default_img_content_description"
            />

        <com.ivankocijan.magicviews.views.MagicTextView
            android:textSize="@dimen/text_very_big"
            android:textColor="@color/wtw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_subtitle_1"
            app:typeFace="lato-regular.otf"
            />

    </LinearLayout>

    <com.ivankocijan.magicviews.views.MagicTextView
        android:textSize="@dimen/text_very_big"
        android:textColor="@color/splash_blue_light"
        android:id="@id/activity_splash_text_subtitle_2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/splash_subtitle_2_label"
        android:layout_below="@id/activity_splash_layout_subtitle_1"
        android:layout_centerHorizontal="true"
        app:typeFace="lato-regular.otf"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/activity_splash_layout_subtitle_2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:layout_below="@id/activity_splash_text_subtitle_2_label"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="32.0dip"
            android:layout_height="22.0dip"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/img_splash_subtitle_2_1"
            android:contentDescription="@string/default_img_content_description"
            />

        <com.ivankocijan.magicviews.views.MagicTextView
            android:textSize="@dimen/text_very_big"
            android:textColor="@color/wtw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_subtitle_2_1"
            app:typeFace="lato-regular.otf"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/activity_splash_layout_subtitle_2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:layout_below="@id/activity_splash_layout_subtitle_2_1"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="43.0dip"
            android:layout_height="18.0dip"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/img_splash_subtitle_2_2"
            android:contentDescription="@string/default_img_content_description"
            />

        <com.ivankocijan.magicviews.views.MagicTextView
            android:textSize="@dimen/text_very_big"
            android:textColor="@color/wtw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_subtitle_2_2"
            app:typeFace="lato-regular.otf"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/activity_splash_layout_subtitle_2_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:layout_below="@id/activity_splash_layout_subtitle_2_2"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="17.0dip"
            android:layout_height="20.0dip"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/img_splash_subtitle_2_3"
            android:contentDescription="@string/default_img_content_description"
            />

        <com.ivankocijan.magicviews.views.MagicTextView
            android:textSize="@dimen/text_very_big"
            android:textColor="@color/wtw"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_subtitle_2_3"
            app:typeFace="lato-regular.otf"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <com.ivankocijan.magicviews.views.MagicTextView
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            android:textColor="@color/wtw"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8.0dip"
            android:text="@string/splash_made_by"
            app:typeFace="lato-bold.otf"
            />

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="32.0dip"
            android:layout_height="32.0dip"
            android:src="@drawable/img_3ie_logo"
            android:contentDescription="@string/default_img_content_description"
            />

    </LinearLayout>
</RelativeLayout>
